== Version ?: Not Released ==

* Hamcrest_Core_StringContains can ignore case using stripos().

    assertThat('fOObAr', containsStringIgnoringCase('oba'));
    assertThat('fOObAr', containsString('oba')->ignoringCase());


== Version 0.3.0: Released Jul 26 2010 ==

* Added running count to Hamcrest_MatcherAssert with methods to get and reset it.
  This can be used by unit testing frameworks for reporting.

* Added Hamcrest_Core_HasToString to assert return value of toString() or __toString().

    assertThat($anObject, hasToString('foo'));

* Added Hamcrest_Type_IsScalar to assert is_scalar().
  Matches values of type bool, int, float, double, and string.

    assertThat($count, scalarValue());
    assertThat('foo', scalarValue());

* Added Hamcrest_Collection package.

  - IsEmptyTraversable
  - IsTraversableWithSize

    assertThat($iterator, emptyTraversable());
    assertThat($iterator, traversableWithSize(5));

* Added Hamcrest_Xml_HasXPath to assert XPath expressions or the content of nodes in an XML/HTML DOM.

    assertThat($dom, hasXPath('books/book/title'));
    assertThat($dom, hasXPath('books/book[contains(title, "Alice")]', 3));
    assertThat($dom, hasXPath('books/book/title', 'Alice in Wonderland'));
    assertThat($dom, hasXPath('count(books/book)', greaterThan(10)));

* Added aliases to match the Java API.

    hasEntry() -> hasKeyValuePair()
    hasValue() -> hasItemInArray()
    contains() -> arrayContaining()
    containsInAnyOrder() -> arrayContainingInAnyOrder()

* Added optional subtype to Hamcrest_TypeSafeMatcher to enforce object class or resource type.

* Hamcrest_TypeSafeDiagnosingMatcher now extends Hamcrest_TypeSafeMatcher.


== Version 0.2.0: Released Jul 14 2010 ==

Issues Fixed: 109, 111, 114, 115

* Description::appendValues() and appendValueList() accept Iterator and IteratorAggregate. [111]
  BaseDescription::appendValue() handles IteratorAggregate.

* assertThat() accepts a single boolean parameter and